Revert config endpoint move
