# crates/pipeline-manager/src/api/main.rs
@@ -229,6 +229,7 @@ fn public_scope() -> Scope {
     // or route resolution does not work correctly.
     web::scope("")
         .service(endpoints::config::get_config_authentication)
+        .service(endpoints::config::get_config)
         .service(SwaggerUi::new("/swagger-ui/{_:.*}").url("/api-doc/openapi.json", openapi))
         .service(healthz)
         .service(ResourceFiles::new("/", generate()).resolve_not_found_to_root())
@@ -265,7 +266,6 @@ fn api_scope() -> Scope {
         .service(endpoints::api_key::post_api_key)
         .service(endpoints::api_key::delete_api_key)
         // Configuration endpoints
-        .service(endpoints::config::get_config)
         .service(endpoints::config::get_config_demos)
         // Metrics of all pipelines belonging to this tenant
         .service(endpoints::metrics::get_metrics)
